--- a/html/Test3.html
+++ b/html/Test3.html
@@ -8,7 +8,7 @@
 <h1> Comparison </h1>
 <p> Moto E7 Plus   vs   Realme Narzo 20A</p>
 
-<p> <a href="C:\Users\Ashwin\Desktop\6.html"> Click Here </a>  For quick comparison. </p>
+<p> <a href="C:\Users\Ashwin\Desktop\learn\project\html\Test4 comp.html"> Click Here </a>  For quick comparison. </p>
 
 
 </body>
